--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,4 @@ S3method(calibVars,default)
 S3method(calibVars,matrix)
 export(calibVars)
 export(calibWeights)
-import(MASS)
+importFrom(MASS,ginv)
