--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,17 @@
+Encoding: UTF-8
 Package: grake
-Title: What the Package Does (one line, title case)
+Title: Generalized raking as described by Deville et al. (1993)
 Version: 0.0-0.3
-Authors@R: "Kirill Müller <krlml+r@mailbox.org> [aut, cre]"
-Description: What the package does (one paragraph)
+Authors@R: c( person("Kirill", "Müller", role = c("ctb", "cre"), email = "krlmlr+r@mailbox.org"),
+    person("Andreas", "Alfons", role = "aut"),
+    person("Matthias", "Templ", role = "aut"))
+Description: This package implements functions for generalized raking as
+    described in Deville et al. (1993): "Generalized raking procedures in survey
+    sampling".  The code strives to provide performance and ease of use.
 Depends:
     R (>= 3.1.2)
 License: GPL-3
 LazyData: true
-Encoding: UTF-8
 Imports:
     MASS
 Suggests:
