--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,8 @@ Depends:
 License: GPL-3
 LazyData: true
 Imports:
-    MASS
+    Rcpp (>= 0.11.3)
 Suggests:
     testthat,
     sampling
-Imports: Rcpp (>= 0.11.3)
 LinkingTo: Rcpp, RcppArmadillo
