--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ S3method(calibVars,default)
 S3method(calibVars,matrix)
 export(calibVars)
 export(calibWeights)
+export(cginv)
 importFrom(MASS,ginv)
