--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
   - ./travis-tool.sh bootstrap
 
 install:
+  - ./travis-tool.sh github_package hadley/testthat jimhester/covr
   - ./travis-tool.sh install_deps
-  - ./travis-tool.sh github_package jimhester/covr
   - ./travis-tool.sh dump_sysinfo
 
 script: ./travis-tool.sh run_tests
