install, and split into three steps

--- a/wercker.yml
+++ b/wercker.yml
@@ -2,5 +2,11 @@ box: rocker/hadleyverse
 build:
   steps:
     - script:
-        name: install and test
-        code: if ! make test; then fail "Test failed"; fi; if ! make wercker-deploy; then fail "Moving output failed"; fi
+        name: install
+        code: if ! make install; then fail "Install failed"; fi
+    - script:
+        name: test
+        code: if ! make test; then fail "Test failed"; fi
+    - script:
+        name: wercker-deploy
+        code: if ! make wercker-deploy; then fail "Moving output failed"; fi
