--- a/wercker.yml
+++ b/wercker.yml
@@ -13,3 +13,11 @@ build:
     - script:
         name: lint
         code: if ! make lintr; then fail "Linting failed"; fi
+    - script:
+        name: staticdocs
+        code: if ! make staticdocs; then fail "Building docs failed"; fi
+deploy:
+  steps:
+    - lukevivier/gh-pages@0.2.1:
+        token: $GITHUB_TOKEN
+        basedir: inst/web
