--- a/wercker.yml
+++ b/wercker.yml
@@ -2,6 +2,9 @@ box: krlmlr/r-test
 build:
   steps:
     - script:
+        name: submodules
+        code: if ! make init; then fail "Init of submodules failed"; fi
+    - script:
         name: install
         code: if ! make install; then fail "Install failed"; fi
     - script:
