--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,10 +1,9 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^\.travis\.yml$
-^Makefile$
 ^NEWS\.md$
 ^NEWS\.md\.tmpl$
 ^wercker\.yml$
 ^\.lintr$
-^/Makefile$
-^/makeR
+^Makefile$
+^makeR
