--- a/wercker.yml
+++ b/wercker.yml
@@ -23,6 +23,6 @@ deploy:
   steps:
     - leipert/add-ssh-key-gh-bb@0.0.6:
         keyname: DEPLOY_SSH
-    - script:
-        name: staticdocs
-        code: if ! make gh-pages-build gh-pages-push; then fail "Uploading docs failed"; fi
+    - add-to-known_hosts:
+        hostname: github.com
+        fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
