--- a/wercker.yml
+++ b/wercker.yml
@@ -28,4 +28,4 @@ deploy:
         fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
     - script:
         name: staticdocs
-        code: if ! make gh-pages-build gh-pages-push; then fail "Uploading docs failed"; fi
+        code: pwd; if ! make gh-pages-build gh-pages-push; then fail "Uploading docs failed"; fi
