deploy via step

--- a/wercker.yml
+++ b/wercker.yml
@@ -26,6 +26,6 @@ deploy:
     - add-to-known_hosts:
         hostname: github.com
         fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
-    - script:
-        name: staticdocs
-        code: pwd; if ! make gh-pages-build gh-pages-push; then fail "Uploading docs failed"; fi
+    - leipert/git-push@0.7.6:
+        gh_pages: true
+        basedir: inst/web
