--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Encoding: UTF-8
 Package: grake
-Title: Generalized raking as described by Deville et al. (1993)
+Title: Generalized Raking as Described by Deville et al. (1993)
 Version: 0.1
 Authors@R: c( person("Kirill", "Müller", role = c("ctb", "cre"), email = "krlmlr+r@mailbox.org"),
     person("Andreas", "Alfons", role = "aut"),
