--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,3 @@
-Encoding: UTF-8
 Package: grake
 Title: Generalized Raking as Described by Deville et al. (1993)
 Version: 0.1-2
@@ -10,13 +9,14 @@ Description: This package implements functions for generalized raking as
     described in Deville et al. (1993): "Generalized raking procedures in survey
     sampling".  The code strives to provide performance and ease of use.
 License: GPL-3
-LazyData: true
-Imports:
-    Matrix
-Suggests:
-    testthat,
-    sampling
 URL: http://krlmlr.github.io/grake
-URLNote: https://github.com/krlmlr/grake
 BugReports: https://github.com/krlmlr/grake/issues
-RoxygenNote: 5.0.1
+Imports: 
+    Matrix
+Suggests: 
+    sampling,
+    testthat
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 6.0.1
+URLNote: https://github.com/krlmlr/grake
